--- a/DroidconBoston/DroidconBoston/Base.lproj/LaunchScreen.storyboard
+++ b/DroidconBoston/DroidconBoston/Base.lproj/LaunchScreen.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,18 +22,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="banner" translatesAutoresizingMaskIntoConstraints="NO" id="RAs-ms-6mI">
-                                <rect key="frame" x="0.0" y="183.5" width="375" height="300"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bostonmap" translatesAutoresizingMaskIntoConstraints="NO" id="Sg5-Tw-DXR">
+                                <rect key="frame" x="0.0" y="133.5" width="375" height="500"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="b8i-46-VDh"/>
+                                    <constraint firstAttribute="height" constant="500" id="2lq-dV-SuQ"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Droidcon Boston" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KDM-wa-YnC">
+                                <rect key="frame" x="16" y="118" width="343" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="hNd-aJ-eHw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <color key="textColor" red="0.0" green="0.98572474718093872" blue="0.74857747554779053" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.23304232954978943" green="0.26813933253288269" blue="0.40771093964576721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.26077365879999997" green="0.30266380310000002" blue="0.4519754648" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="RAs-ms-6mI" secondAttribute="trailing" id="kaH-Sp-n3K"/>
-                            <constraint firstItem="RAs-ms-6mI" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="lrO-sR-UBd"/>
-                            <constraint firstItem="RAs-ms-6mI" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="qgI-IL-ElV"/>
+                            <constraint firstItem="Sg5-Tw-DXR" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="50" id="3mI-iF-Ume"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="KDM-wa-YnC" secondAttribute="trailing" id="EjH-f8-dZW"/>
+                            <constraint firstAttribute="trailing" secondItem="Sg5-Tw-DXR" secondAttribute="trailing" id="VVa-oS-tmR"/>
+                            <constraint firstItem="Sg5-Tw-DXR" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="azM-6u-UPB"/>
+                            <constraint firstItem="KDM-wa-YnC" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="kQV-82-rRm"/>
+                            <constraint firstItem="KDM-wa-YnC" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-200" id="ub9-CA-Ng8"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -42,6 +55,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="banner" width="1024" height="500"/>
+        <image name="bostonmap" width="612" height="792"/>
     </resources>
 </document>
