--- a/DroidconBoston/DroidconBoston/Base.lproj/LaunchScreen.storyboard
+++ b/DroidconBoston/DroidconBoston/Base.lproj/LaunchScreen.storyboard
@@ -22,10 +22,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bostonmap" translatesAutoresizingMaskIntoConstraints="NO" id="Sg5-Tw-DXR">
-                                <rect key="frame" x="0.0" y="133.5" width="375" height="500"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bostonmap" translatesAutoresizingMaskIntoConstraints="NO" id="Sg5-Tw-DXR">
+                                <rect key="frame" x="0.0" y="208.5" width="375" height="350"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="500" id="2lq-dV-SuQ"/>
+                                    <constraint firstAttribute="height" constant="350" id="2lq-dV-SuQ"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Droidcon Boston" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KDM-wa-YnC">
@@ -41,10 +41,10 @@
                         <color key="backgroundColor" red="0.26077365879999997" green="0.30266380310000002" blue="0.4519754648" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Sg5-Tw-DXR" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="50" id="3mI-iF-Ume"/>
+                            <constraint firstItem="Sg5-Tw-DXR" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="ATt-Z3-bUD"/>
                             <constraint firstAttribute="trailingMargin" secondItem="KDM-wa-YnC" secondAttribute="trailing" id="EjH-f8-dZW"/>
-                            <constraint firstAttribute="trailing" secondItem="Sg5-Tw-DXR" secondAttribute="trailing" id="VVa-oS-tmR"/>
-                            <constraint firstItem="Sg5-Tw-DXR" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="azM-6u-UPB"/>
                             <constraint firstItem="KDM-wa-YnC" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="kQV-82-rRm"/>
+                            <constraint firstAttribute="trailing" secondItem="Sg5-Tw-DXR" secondAttribute="trailing" id="rnR-Bm-JT7"/>
                             <constraint firstItem="KDM-wa-YnC" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-200" id="ub9-CA-Ng8"/>
                         </constraints>
                     </view>
@@ -55,6 +55,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bostonmap" width="612" height="792"/>
+        <image name="bostonmap" width="1924" height="1804"/>
     </resources>
 </document>
