--- a/ios/DroidconBoston/Base.lproj/LaunchScreen.xib
+++ b/ios/DroidconBoston/Base.lproj/LaunchScreen.xib
@@ -1,37 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+            <rect key="frame" x="0.0" y="0.0" width="418" height="510"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="Y8Y-GO-TDY">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundGradient" translatesAutoresizingMaskIntoConstraints="NO" id="Qzq-Jb-CyZ">
+                    <rect key="frame" x="0.0" y="0.0" width="418" height="510"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="droidAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="LvG-yg-tC6">
+                    <rect key="frame" x="62.5" y="289" width="293" height="221"/>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.47058823529411764" green="0.29019607843137257" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="Y8Y-GO-TDY" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="BBB-9H-RDx"/>
-                <constraint firstAttribute="bottom" secondItem="Y8Y-GO-TDY" secondAttribute="bottom" id="Qe6-Kd-EhX"/>
-                <constraint firstItem="Y8Y-GO-TDY" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="XDq-hT-7dO"/>
-                <constraint firstAttribute="trailing" secondItem="Y8Y-GO-TDY" secondAttribute="trailing" id="dxc-ZG-bql"/>
+                <constraint firstAttribute="bottom" secondItem="LvG-yg-tC6" secondAttribute="bottom" id="5Y5-xY-ajm"/>
+                <constraint firstItem="LvG-yg-tC6" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="7xD-Ds-ZGB"/>
+                <constraint firstAttribute="bottom" secondItem="Qzq-Jb-CyZ" secondAttribute="bottom" id="8oD-uE-ezO"/>
+                <constraint firstAttribute="trailing" secondItem="Qzq-Jb-CyZ" secondAttribute="trailing" id="HC5-r1-zYH"/>
+                <constraint firstItem="Qzq-Jb-CyZ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="dZ2-iA-yTX"/>
+                <constraint firstItem="Qzq-Jb-CyZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="wgz-eA-mvn"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="548" y="455"/>
+            <point key="canvasLocation" x="497.60000000000002" y="467.76611694152928"/>
         </view>
     </objects>
     <resources>
-        <image name="splash" width="1080" height="1916"/>
+        <image name="backgroundGradient" width="375" height="812"/>
+        <image name="droidAvatar" width="293" height="221"/>
     </resources>
 </document>
